[gd_scene load_steps=5 format=2]

[ext_resource path="res://textures/tilemap.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 7.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.5, 1.5 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 136, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="LeftCollision" type="Area2D" parent="."]
position = Vector2( -10, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftCollision"]
modulate = Color( 0.427451, 0.184314, 0.184314, 1 )
position = Vector2( 2, 0 )
shape = SubResource( 2 )

[node name="RightCollision" type="Area2D" parent="."]
position = Vector2( 10, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightCollision"]
modulate = Color( 0.427451, 0.184314, 0.184314, 1 )
position = Vector2( -2, 0 )
shape = SubResource( 2 )

[node name="TopCollision" type="Area2D" parent="."]
position = Vector2( 0, -9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopCollision"]
modulate = Color( 0.427451, 0.184314, 0.184314, 1 )
shape = SubResource( 2 )

[node name="BottomCollision" type="Area2D" parent="."]
position = Vector2( 0, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomCollision"]
modulate = Color( 0.427451, 0.184314, 0.184314, 1 )
shape = SubResource( 2 )

[node name="DrillTimer" type="Timer" parent="."]

[connection signal="timeout" from="DrillTimer" to="." method="_on_DrillTimer_timeout"]
